<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">
    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Add Holder Details"
        android:textAllCaps="true"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/black"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialog_textview_name"
            style="@style/BaseTheme"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_name" />

        <EditText
            android:id="@+id/dialog_editText_name"
            style="@style/BaseTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialog_textview_relation"
            style="@style/BaseTheme"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_relation" />

        <Spinner
            android:id="@+id/dialog_spinner_relation"
            style="@style/BaseTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialog_textView_age"
            style="@style/BaseTheme"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_age" />

        <EditText
            android:id="@+id/dialog_editText_age"
            style="@style/BaseTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </LinearLayout>

</LinearLayout>