<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <android.support.v7.widget.Toolbar
                android:id="@+id/mytoolbar"
                android:layout_height="60dp"
                android:layout_width="match_parent"
                android:background="@color/material_blue_grey_800"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:title="Investment Reminders"
                android:titleTextColor="@color/black"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center_horizontal"
                android:text="Enter Policy details"
                android:textColor="@color/black"
                android:textSize="35sp" />

            <GridLayout
                android:id="@+id/gridlayout_form"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/textview_form_name"
                    style="@style/BaseTheme"
                    android:layout_column="0"
                    android:layout_row="0"
                    android:text="@string/form_name" />

                <TextView
                    android:id="@+id/textview_form_holder_name"
                    style="@style/BaseTheme"
                    android:layout_column="0"
                    android:layout_gravity="center_vertical"
                    android:layout_row="1"
                    android:text="@string/form_holdername" />
                <TextView
                    android:id="@+id/textview_form_main_holder_name"
                    style="@style/BaseTheme"
                    android:layout_column="0"
                    android:layout_gravity="center_vertical"
                    android:layout_row="2"
                    android:text="@string/form_main_holdername" />

                <TextView
                    android:id="@+id/textview_form_investmentplan"
                    style="@style/BaseTheme"
                    android:layout_column="0"
                    android:layout_gravity="center_vertical"
                    android:layout_row="3"
                    android:text="@string/form_investmentplan" />

                <TextView
                    android:id="@+id/textview_form_policy_no"
                    style="@style/BaseTheme"
                    android:layout_column="0"
                    android:layout_row="4"
                    android:text="@string/form_policy_no" />


                <EditText
                    android:id="@+id/edittext_form_name"
                    style="@style/BaseTheme"
                    android:singleLine="true"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_row="0" />

                <!--   <android.support.v7.widget.AppCompatSpinner
                       android:id="@+id/spinner_holder_names"
                       android:layout_width="150dp"
                       android:layout_height="wrap_content" />   -->

                <com.reminder.multispinner.MultiSpinnerSearch
                    android:id="@+id/searchMultiSpinner"
                    android:layout_width="165dp"
                    android:layout_height="wrap_content"
                    style="@style/BaseTheme"
                    android:layout_column="1"
                    android:layout_gravity="center_vertical"
                    android:layout_row="1"
                    app:hintText="Select Holder" />


                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fab_add_holder_names"
                    style="@style/BaseTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_gravity="end"
                    android:layout_row="1"
                    app:fabSize="mini"
                    app:srcCompat="@android:drawable/ic_input_add" />
                <EditText
                    android:id="@+id/edittext_form_main_holder_name"
                    style="@style/BaseTheme"
                    android:singleLine="true"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_row="2" />

                <Spinner
                    android:id="@+id/spinner_category_names"
                    style="@style/BaseTheme"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_gravity="center_vertical"
                    android:layout_row="3" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fab_add_category_names"
                    style="@style/BaseTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_gravity="end"
                    android:layout_row="3"
                    app:fabSize="mini"
                    app:srcCompat="@android:drawable/ic_input_add" />

                <EditText
                    android:id="@+id/edittext_form_policy_no"
                    style="@style/BaseTheme"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:singleLine="true"
                    android:layout_row="4" />


                <Button
                    android:id="@+id/button_form_submit"
                    style="@style/BaseTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_row="5"
                    android:text="@string/form_button_next" />


            </GridLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>